[gd_scene load_steps=31 format=3 uid="uid://bnc6m3ucq817b"]

[ext_resource type="Script" uid="uid://cixu45r7ruipe" path="res://Scripts/character_body_2d.gd" id="1_1qmy6"]
[ext_resource type="Texture2D" uid="uid://0l6jfm7qarwt" path="res://sprites/ChatGPT Image May 31, 2025, 04_44_23 PM.png" id="2_l2ebn"]
[ext_resource type="Texture2D" uid="uid://qtncv1wl0kmc" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion1.png" id="3_ciqj2"]
[ext_resource type="Texture2D" uid="uid://dak4h2rsgbw3y" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion2.png" id="4_1qjqj"]
[ext_resource type="Texture2D" uid="uid://de7hbe1tnsbog" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion3.png" id="5_moyei"]
[ext_resource type="Texture2D" uid="uid://hrs4ex6sv7ip" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion4.png" id="6_wbjd8"]
[ext_resource type="Texture2D" uid="uid://c2xnp66ew6iqf" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion5.png" id="7_clh8m"]
[ext_resource type="Texture2D" uid="uid://ch4jjf3ofn8yj" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion6.png" id="8_5qi74"]
[ext_resource type="Texture2D" uid="uid://bjjeaukde2s0p" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion7.png" id="9_plcel"]
[ext_resource type="Texture2D" uid="uid://yvcf32bakg7p" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion8.png" id="10_pukya"]
[ext_resource type="Texture2D" uid="uid://dd5frobhcq256" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion9.png" id="11_wlhgc"]
[ext_resource type="Texture2D" uid="uid://bs0devmb14jej" path="res://sprites/Explosion:Fire/PNG/Explosion/Explosion10.png" id="12_sw007"]
[ext_resource type="Texture2D" uid="uid://d3qemd3wnvi5c" path="res://sprites/Explosion:Fire/PNG/Fire/Fire1.png" id="13_plcel"]
[ext_resource type="Texture2D" uid="uid://c3kasvb355w0x" path="res://sprites/Explosion:Fire/PNG/Fire/Fire2.png" id="14_pukya"]
[ext_resource type="Texture2D" uid="uid://dswuac5ikdvoi" path="res://sprites/Explosion:Fire/PNG/Fire/Fire3.png" id="15_wlhgc"]
[ext_resource type="Texture2D" uid="uid://4xbpus2pfbse" path="res://sprites/Explosion:Fire/PNG/Fire/Fire4.png" id="16_sw007"]
[ext_resource type="Texture2D" uid="uid://bthotx7s0xh1h" path="res://sprites/Explosion:Fire/PNG/Fire/Fire5.png" id="17_scoui"]
[ext_resource type="Texture2D" uid="uid://dv4k4eg1a1brr" path="res://sprites/Explosion:Fire/PNG/Fire/Fire6.png" id="18_py3dd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xrgj3"]
atlas = ExtResource("2_l2ebn")
region = Rect2(0, 0, 256, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiwk6"]
atlas = ExtResource("2_l2ebn")
region = Rect2(256, 0, 256, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkw4p"]
atlas = ExtResource("2_l2ebn")
region = Rect2(768, 0, 256, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxw2b"]
atlas = ExtResource("2_l2ebn")
region = Rect2(0, 282, 256, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivua1"]
atlas = ExtResource("2_l2ebn")
region = Rect2(768, 282, 256, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_didsw"]
atlas = ExtResource("2_l2ebn")
region = Rect2(0, 564, 256, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_031ew"]
atlas = ExtResource("2_l2ebn")
region = Rect2(768, 564, 256, 282)

[sub_resource type="SpriteFrames" id="SpriteFrames_maege"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrgj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiwk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkw4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxw2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivua1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_didsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_031ew")
}],
"loop": true,
"name": &"Fallingtree",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_scoui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ciqj2")
}, {
"duration": 1.0,
"texture": ExtResource("4_1qjqj")
}, {
"duration": 1.0,
"texture": ExtResource("5_moyei")
}, {
"duration": 1.0,
"texture": ExtResource("6_wbjd8")
}, {
"duration": 1.0,
"texture": ExtResource("7_clh8m")
}, {
"duration": 1.0,
"texture": ExtResource("8_5qi74")
}, {
"duration": 1.0,
"texture": ExtResource("9_plcel")
}, {
"duration": 1.0,
"texture": ExtResource("10_pukya")
}, {
"duration": 1.0,
"texture": ExtResource("11_wlhgc")
}, {
"duration": 1.0,
"texture": ExtResource("12_sw007")
}],
"loop": false,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_plcel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_plcel")
}, {
"duration": 1.0,
"texture": ExtResource("14_pukya")
}, {
"duration": 1.0,
"texture": ExtResource("15_wlhgc")
}, {
"duration": 1.0,
"texture": ExtResource("16_sw007")
}, {
"duration": 1.0,
"texture": ExtResource("17_scoui")
}, {
"duration": 1.0,
"texture": ExtResource("18_py3dd")
}],
"loop": true,
"name": &"Fire",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plcel"]
size = Vector2(61.5, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pukya"]
size = Vector2(89, 813)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_1qmy6")

[node name="FallingTree" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 77)
sprite_frames = SubResource("SpriteFrames_maege")
animation = &"Fallingtree"
frame_progress = 0.639877

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(456, 150)
scale = Vector2(2.00781, 1.84375)
sprite_frames = SubResource("SpriteFrames_scoui")
animation = &"explosion"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(477, 108)
scale = Vector2(1.4707, 1.41602)
sprite_frames = SubResource("SpriteFrames_plcel")
animation = &"Fire"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(476, 179.5)
shape = SubResource("RectangleShape2D_plcel")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(48, 325.5)
shape = SubResource("RectangleShape2D_pukya")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
